--- a/proxy-nas.yml
+++ b/proxy-nas.yml
@@ -20,4 +20,4 @@ services:
       - net
     labels:
       - "com.centurylinklabs.watchtower.enable=true"
-      - "org.label-schema.group=nas-system"
+      - "org.label-schema.group=system-nas"
